# espresso

./: .dockerignore  .env  .envrc  .gitignore  .gitlab-ci.yml  .license-header.txt  CNAME  Cargo.toml  Dockerfile  README.md  cargo-system-config.toml  cargos.sh  crates.js  docker-compose.yaml  errors.txt  flake.nix  index.html  pyproject.toml  search-index.js  settings.html  setup-hooks.sh  shell.nix  source-files.js
.cargo/: config
address-book/: Cargo.toml  README.md
address-book/api/: api.toml
address-book/src/: error.rs  lib.rs  main.rs  signal.rs  store.rs
address-book/tests/: tests.rs
apis/availability/: Cargo.toml
apis/availability/api/: api.toml
apis/availability/src/: api.rs  data_source.rs  lib.rs  query_data.rs
apis/esqs/: Cargo.toml
apis/esqs/src/: full_node.rs  full_node_data_source.rs  lib.rs  update_query_data_source.rs
apis/validator/: Cargo.toml
apis/validator/api/: api.toml
apis/validator/src/: api.rs  data_source.rs  lib.rs
client/: Cargo.toml  README.md
client/src/: cli_client.rs  lib.rs  main.rs  network.rs
client/src/testing/: mocks.rs  mod.rs
client/tests/: cli_integration_tests.rs  demo2.rs
core/: Cargo.toml  README.md
core/fuzz/: Cargo.toml
core/src/: committee.rs  full_persistence.rs  genesis.rs  kv_merkel_tree.rs  kv_merkle_tree.rs  kvmt_instances.rs  ledger.rs  lib.rs  lw_persistence.rs  merkle_tree.rs  reward.rs  set_merkle_tree.rs  stake_table.rs  state.rs  testing.rs  tree_hash.rs  universal_params.rs  util.rs
examples/asynctide/: Cargo.toml  Makefile
examples/asynctide/public/: index.html
examples/asynctide/public/js/: ws.js
examples/asynctide/src/: main.rs
examples/consensing/: Cargo.toml
examples/consensing/src/: main.rs
examples/demo_1/: Cargo.toml
examples/demo_1/src/: main.rs
examples/multi_machine/: Cargo.toml  README.md
examples/multi_machine/api/: api.toml
examples/multi_machine/public/: index.html
examples/multi_machine/public/css/: style.css
examples/multi_machine/public/js/: script.js  ws.js
examples/multi_machine/src/: config.rs  disco.rs  main.rs  node-config.toml  pk_0  pk_1  pk_2  pk_3  pk_4  pk_5  pk_6  routes.rs
examples/multi_machine/src/store/node0/lw_validator/: .multi_machine_demo_state_0
examples/multi_machine/src/store/node1/lw_validator/: multi_machine_demo_archived_1  multi_machine_demo_archived_4  multi_machine_demo_state_index_index
examples/multi_machine/src/store/node2/lw_validator/: .multi_machine_demo_state_index_index_working  multi_machine_demo_archived_0
examples/multi_machine/src/store/node3/lw_validator/: multi_machine_demo_archived_2  multi_machine_demo_archived_3  multi_machine_demo_archived_4  multi_machine_demo_latest
examples/tideui/: Cargo.toml  README.md
examples/tideui/src/: main.rs  transfer.html
faucet/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js
faucet/api/: api.toml
faucet/faucet/: enum.FaucetStatus.html  fn.break_up_records.html  fn.check_service_available.html  fn.healthcheck.html  fn.init_web_server.html  fn.main.html  fn.maintain_enough_records.html  fn.request_fee_assets.html  fn.spendable_records.html  fn.worker.html  index.html  sidebar-items.js  struct.FaucetOptions.html  struct.FaucetQueue.html  struct.FaucetQueueIndex.html  struct.FaucetState.html  struct.HealthCheck.html
faucet/faucet_keystore_test_setup/: fn.field_to_hex.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
faucet/src/: faucet.rs  faucet_keystore_test_setup.rs  faucet_wallet_test_setup.rs  lib.rs
faucet/types/: Cargo.toml
faucet/types/src/: lib.rs
src/: main.rs
validator/: Cargo.toml  README.md
validator/api/: api.toml
validator/public/: index.html
validator/public/css/: style.css
validator/public/js/: script.js
validator/src/: disco.rs  full_node_data_source.rs  full_node_esqs.rs  full_node_mem_data_source.rs  lib.rs  network.rs  node-config.toml  node_impl.rs  pk_0  pk_0.toml  pk_1  pk_1.toml  pk_2  pk_2.toml  pk_3  pk_3.toml  pk_4  pk_4.toml  pk_5  pk_5.toml  pk_6  pk_6.toml  routes.rs  simulation.rs  testing.rs  validator.rs
validator/src/testing/: rewards.rs
zerok/apis/availability/: Cargo.toml
zerok/apis/availability/src/: data_source.rs  query_data.rs
zerok/apis/catchup/: Cargo.toml
zerok/apis/catchup/src/: data_source.rs
zerok/apis/status/: Cargo.toml
zerok/apis/status/src/: data_source.rs  query_data.rs
zerok/counter/: Cargo.toml
zerok/counter/src/: main.rs
zerok/demo1/: Cargo.toml  README.md  demo1.toml  messages.toml
zerok/demo1/src/: config.rs  disco.rs  main.rs
zerok/validator_node/: Cargo.toml
zerok/validator_node/src/: api.rs  lib.rs  node.rs  serializers.rs  validator_node.rs
zerok/validator_node/src/keystore/: mod.rs  network.rs
zerok/validator_node/src/keystore/testing/: mocks.rs  mod.rs
zerok/validator_status_api/: Cargo.toml
zerok/validator_status_api/src/: query_data.rs
zerok/zerok_client/: Cargo.toml  README.md
zerok/zerok_client/src/: cli_client.rs  lib.rs  main.rs
zerok/zerok_client/tests/: cli_integration_tests.rs  demo2.rs  test_state.rs
zerok/zerok_lib/: Cargo.toml  README.md  set_merkle_tree_spec.txt
zerok/zerok_lib/fuzz/: Cargo.toml
zerok/zerok_lib/fuzz/fuzz_targets/: multixfr_wallet.rs
zerok/zerok_lib/src/: api.rs  cape_ledger.rs  cape_state.rs  committee.rs  config.rs  events.rs  full_3ary_merkle_tree.rs  full_persistence.rs  kv_merkel_tree.rs  ledger.rs  lib.rs  lw_persistence.rs  macro_tests.rs  node.rs  set_merkle_tree.rs  spectrum_api.rs  state.rs  store_adaptors.rs  testing.rs  tree_hash.rs  txn_builder.rs  universal_params.rs  util.rs  validator_node.rs  wallet.rs
zerok/zerok_lib/src/keystore/: mod.rs  network.rs
zerok/zerok_lib/src/keystore/testing/: mocks.rs
zerok/zerok_lib/src/wallet/: cape.rs  cli.rs  encryption.rs  hd.rs  loader.rs  mod.rs  network.rs  persistence.rs  reader.rs  secret.rs  spectrum.rs
zerok/zerok_lib/src/wallet/testing/: aap_test.rs  cape_test.rs  mocks.rs  mod.rs  spectrum_test.rs  tests.rs
zerok/zerok_macros/: Cargo.toml
zerok/zerok_macros/src/: generic_tests.rs  lib.rs
(+1229 files in other folders)
