# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[workspace]
resolver = "2"

members = [
    "address-book",
    "apis/availability",
    "apis/catchup",
    "apis/esqs",
    "apis/metastate",
    "apis/status",
    "apis/validator",
    "client",
    "core",
    "faucet",
    "faucet/types",
    "validator",
  ]
[profile.dev]
opt-level = 1

# The default release profile without LTO.
[profile.release]
debug = true
incremental = true
# Disable LTO to decrease the linking time.
lto = "off"

# The release profile with LTO.
# CI uses this profile. To run it locally, add `--profile=release-lto` to `cargo build` or `cargo
# test`.
[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to optimize performance.
lto = "thin"

# In order to avoid a dependency resolution error with `zeroize` we patch
# jellyfish to include an update of `crypto_box`. Once espresso is using a
# jellyfish version that includes commit
# 535e190b3b443d4dca53d930832eb246425d32c2, this patch can be removed.
[patch."https://github.com/EspressoSystems/jellyfish.git"]
# The double slash before jellyfish is to work around the following error
#     patch for `jf-plonk` in `https://github.com/EspressoSystems/jellyfish.git` points to the same source, but patches must point to different sources
jf-primitives = { git = "https://github.com/EspressoSystems//jellyfish", branch = "cherry-picked-crypto_box-update" }
jf-plonk = { git = "https://github.com/EspressoSystems//jellyfish", branch = "cherry-picked-crypto_box-update" }
jf-utils = { git = "https://github.com/EspressoSystems//jellyfish", branch = "cherry-picked-crypto_box-update" }
jf-utils-derive = { git = "https://github.com/EspressoSystems//jellyfish", branch = "cherry-picked-crypto_box-update" }


[patch."ssh://git@github.com/EspressoSystems/espresso-evm"]
espresso-evm = { path = "../espresso-evm" }
