# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[workspace]
resolver = "2"

members = [
    "address-book",
    "apis/availability",
    "apis/catchup",
    "apis/esqs",
    "apis/metastate",
    "apis/status",
    "apis/validator",
    "client",
    "core",
    "faucet",
    "faucet/types",
    "validator",
  ]
[profile.dev]
opt-level = 1

# The default release profile without LTO.
[profile.release]
debug = true
incremental = true
# Disable LTO to decrease the linking time.
lto = "off"

# The release profile with LTO.
# CI uses this profile. To run it locally, add `--profile=release-lto` to `cargo build` or `cargo
# test`.
[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to optimize performance.
lto = "thin"
