# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[tool.poetry]
name = "espresso"
version = "0.1.0"
description = ""
authors = ["Espresso Systems <hello@espressosys.com>"]

[tool.poetry.dependencies]
python = "^3.9"
md-toc = "^8.1.4"
pre-commit-hooks = {git = "https://github.com/Lucas-C/pre-commit-hooks"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
