# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "address-book"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
description = "Web server that maintains a persistent mapping from user addresses to user public keys"
license = "GPL-3.0-or-later"
default-run = "address-book"

[[bin]]
name = "address-book"
path = "src/main.rs"
doc = false

[dependencies]
#portpicker = "0.1"
async-std = { version = "1.8.0", features = ["attributes"] }
bincode = "1.3.3"
clap = { version = "3.2.5", features = ["derive"] }
config = "0.13.1"
dirs = "4.0.0"
espresso-systems-common = { git = "ssh://git@github.com/EspressoSystems/espresso-systems-common.git", tag = "0.2.0" }
futures = "0.3.21"
hex = "0.4.3"
itertools = "0.10.3"
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
net = { git = "https://github.com/EspressoSystems/net.git" }
once_cell = "1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.14"
snafu = { version = "0.7", features = ["backtraces"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.2"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.0" }
tempdir = "0.3.7"
tide = { version = "0.16.0", default-features = false }
tide-disco = { git = "ssh://git@github.com/EspressoSystems/tide-disco.git", branch = "main" }
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.35"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }
url = "2.2.2"

[target.'cfg(not(windows))'.dependencies]
signal-hook-async-std = "0.2.2"

[dev-dependencies]
portpicker = "0.1"
