# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "address-book"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
description = "Web server that maintains a persistent mapping from user addresses to user public keys"
default-run = "address-book"

[[bin]]
name = "address-book"
path = "src/main.rs"
doc = false

[dependencies]
#portpicker = "0.1"
async-std = { version = "1.8.0", features = ["attributes"] }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13.1"
dirs = "4.0.0"
espresso-systems-common = { git = "https://github.com/EspressoSystems/espresso-systems-common.git", tag = "0.2.0" }
futures = "0.3.21"
hex = "0.4.3"
itertools = "0.10.3"
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
once_cell = "1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.14"
snafu = { version = "0.7", features = ["backtraces"] }
strum = "0.24"
strum_macros = "0.24"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.1" }
tempdir = "0.3.7"
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.35"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }

[target.'cfg(not(windows))'.dependencies]
signal-hook-async-std = "0.2.2"

[dev-dependencies]
portpicker = "0.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco.git", tag = "0.1.0" }
