# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "espresso-client"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2018"
default-run = "wallet-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow-tests = []

[[bin]]
name = "wallet-cli"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
bincode = "1.3.3"
escargot = "0.5.2"
espresso-validator = { path = "../validator", features = ["testing"] }
futures = "0.3.16"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
lazy_static = "1.4.0"
portpicker = "0.1"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rustyline = "9.0.0"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.0" }
tempdir = "0.3.7"
toml = "0.5"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator_node = { path = "../validator_node/" }
espresso-core = { path = "../core/" }
