# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "espresso-client"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
default-run = "wallet-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow-tests = []
testing = ["seahorse/testing"]

[[bin]]
name = "wallet-cli"
path = "src/main.rs"

[dependencies]
address-book = { path = "../address-book" }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
cld = "0.5"
derive_more = "0.99"
escargot = "0.5.2"
espresso-availability-api = { path = "../apis/availability" }
espresso-core = { path = "../core/" }
espresso-esqs = { path = "../apis/esqs" }
espresso-metastate-api = { path = "../apis/metastate" }
espresso-validator = { path = "../validator", features = ["testing"] }
faucet-types = { path = "../faucet/types" }
futures = "0.3.16"
hex = "0.4"
human_bytes = "0.3"
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.3.0" }
lazy_static = "1.4.0"
parse-size = { version = "1.0", features = ["std"] }
portpicker = "0.1"
primitive-types = "0.12"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.3.1", features = ["testing"] }
regex = "1.9.4"
rustyline = "9.0.0"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.3.2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.89"
snafu = { version = "0.7", features = ["backtraces"] }
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco.git", tag = "0.1.1" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.1" }
tempdir = "0.3.7"
toml = "0.5"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.3.2", features = ["testing"] }
