# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "espresso-core"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.2", features = ["derive"] }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git", tag = "0.3.0" }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
async_executors = { version = "0.4.2", features = ["async_std"] }
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3" }
bincode = "1.3.3"
bitvec = "1.0"
chacha20 = "0.8.1"
chrono = "0.4.23"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
derive_more = "0.99"
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git", tag = "0.1.0" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
# per https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html, this should work for each project in the workspace
# however, the fact that the workspace subpath specifications do not match the expected package name may present a problem
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.3.0" }
lazy_static = "1.4.0"
mnemonic = "1.0.1"
num-bigint = "0.4"
quickcheck = { version = "1.0", optional = true }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rayon = "*"
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.3.1", features = ["testing"] }
rpassword = "6.0.1"
rust-argon2 = "0.8.3"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "*"
serde_derive = "1.0"
serde_json = "1.0.61"
serde_with = "2.0.1"
sha3 = "^0.10.4"
snafu = { version = "0.7", features = ["backtraces"] }
strum = "0.24"
strum_macros = "0.24"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.1" }
tempdir = "0.3.7"
tracing = "0.1.35"
typenum = "1.15.0"
zeroize = "1.3"

[dev-dependencies]
proptest = "0.8.7"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand_xoshiro = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14.2"

[features]
mocks = []
slow-tests = []
testing = ["quickcheck"]
