# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "faucet"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "faucet"
path = "src/faucet.rs"
doc = false

[[bin]]
name = "faucet-keystore-test-setup"
path = "src/faucet_keystore_test_setup.rs"
doc = false

[[bin]]
name = "faucet-shower"
doc = false

[features]
slow-tests = []

[dependencies]
ark-std = "0.3.0"

async-channel = "1.6"
async-std = "1.10.0"

atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.3" }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0.0"
espresso-client = { path = "../client" }
espresso-core = { path = "../core/" }
faucet-types = { path = "types" }
futures = "0.3.0"
hex = "0.4.3"
jf-cap = { git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
num-bigint = "0.4"
primitive-types = "0.12"
rand = "0.8.5"
rand_chacha = "0.3.1"
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.3.1" }
serde = "1.0.139"
serde_json = "1.0.67"
snafu = "0.7.1"
tempdir = "0.3.7"
tide-disco = { git = "ssh://git@github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
toml = "0.5"
tracing = "0.1.35"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
escargot = "0.5"
espresso-validator = { path = "../validator", features = ["testing"] }
portpicker = "0.1"
surf-disco = { git = "ssh://git@github.com/EspressoSystems/surf-disco.git", tag = "0.1.0" }
tracing-test = "0.2"
