# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "espresso-validator"
version = "0.1.0"
authors = ["Keyao Shen <keyao@translucence.net>", "corbett@pictographer.com"]
edition = "2018"
license = "Copyright (c) 2022 Espresso Systems (espressosys.com)"
default-run = "espresso-validator"

[dependencies]
address-book = { path = "../address-book", optional = true }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"], optional = true }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
cld = "0.4"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
derive_more = "0.99"
dirs = "4.0"
escargot = "0.5.2"
espresso-availability-api = { path = "../apis/availability", optional = true }
espresso-core = { path = "../core/" }
espresso-esqs = { path = "../apis/esqs" }
espresso-metastate-api = { path = "../apis/metastate", optional = true }
espresso-status-api = { path = "../apis/status" }
espresso-validator-api = { path = "../apis/validator" }
futures = "0.3.0"
futures-util = "0.3.8"
hotshot = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.3.1", features = ["async-std-executor", "channel-async-std"] }
hotshot-centralized-server = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.3.1" }
hotshot-types = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.3.1", features = ["async-std-executor", "channel-async-std"] }
human_bytes = "0.3"
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
libp2p = "0.49"
libp2p-networking = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.3.1" }
markdown = "0.3"
portpicker = { version = "0.1", optional = true }
rand = "0.8.5"
rand_chacha = { package = "rand_chacha", version = "0.3.1" }
rand_chacha_02 = { package = "rand_chacha", version = "0.2.2" }
reef = { git = "https://github.com/EspressoSystems/reef.git", optional = true }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", optional = true }
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
sha3 = "^0.10.4"
shellexpand = "2.0"
snafu = { version = "0.7", features = ["backtraces"] }
static_assertions = "1.1"
strum = "0.24"
strum_macros = "0.24"
surf-disco = { git = "ssh://git@github.com/EspressoSystems/surf-disco.git", branch = "main" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.1" }
tempdir = "0.3.7"
tracing = "0.1.35"
tracing-distributed = "0.3.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"

[features]
slow-tests = []
testing = [ "address-book"
          , "async-tungstenite"
          , "espresso-availability-api"
          , "espresso-metastate-api"
          , "portpicker"
          , "reef/testing"
          , "seahorse"
          ]

[dev-dependencies]
address-book = { path = "../address-book" }
espresso-client = { path = "../client" }
portpicker = "0.1"
tracing-test = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.11.0"

[[bin]]
name = "test-query-api"
required-features = ["testing"]
test = true
